flask_app/static/css/data_style.css
html {
    background-color: black;
}

#header {
    border: 2px solid rgb(2, 11, 128);
    padding-top: 7px;
    padding-bottom: 7px;
    margin-top: 7px;
    margin-bottom: 7px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.header-img {
    width: 30px;
    height: 30px;
}

#title {
    text-align: center;
    color: chartreuse;
    letter-spacing: 2px;
    margin-top: 2px;
    margin-bottom: 2px;
    font-size: 3em;
    width: 80%;
}

#controls {
    border: 2px solid rgb(2, 11, 128);
    padding-top: 7px;
    padding-bottom: 7px;
    margin-top: 7px;
    margin-bottom: 7px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.control-button {
    font-size: 1em;
    width: 20%;
    height: 40px;
    background-color: rgb(2, 11, 128);
    color: white;
    margin-right: 7px;
    margin-left: 7px;
}

.control-button:hover {
    background-color: white;
    color: black;
    border: 2px solid rgb(2, 11, 128);
}

.border-div {
    border: 2px solid rgb(2, 11, 128);
    padding-top: 20px;
    padding-bottom: 20px;
}

.data-table {
    border: 1px solid rgb(2, 11, 128);
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 1em;
    border-collapse: collapse;
    margin: auto;
    color: ghostwhite;
    width: 70%;
}

.data-table tr {
    border: 1px solid rgb(2, 11, 128);
    padding-right: 10%;
    padding-left: 10%;
}

.data-table td {
    min-height: 25px;
    padding-top: 2px;
    padding-bottom: 2px;
    padding-right: 2px;
    margin-top: 8px;
}

td:nth-child(1) {
    padding-left: 30px;
    width: 25%;
}

td:nth-child(2) {
    padding-left: 2px;
    width: 75%;
}

.data-table:nth-child(even) {
    background-color: #230820;
}

.data-table:nth-child(odd) {
    background-color: #002900;
}

.data-table tr:hover {
    background-color: #000442;
}

@media only screen and (max-width: 600px) {
    .data-table {
        font-size: 1em;
        margin: 0;
        width: 100%;
    }
    td:nth-child(1) {
        padding-left: 30px;
        width: 25%;
    }
    td:nth-child(2) {
        padding-left: 2px;
        width: 30%;
    }
}

@media screen and (min-width: 600px) and (max-width: 900px) {
    .data-table {
        font-size: 1em;
        margin: 0;
        width: 100%;
    }
    td:nth-child(1) {
        padding-left: 30px;
        width: 25%;
    }
    td:nth-child(2) {
        padding-left: 2px;
        width: 40%;
    }
}

@media screen and (min-width: 900px) and (max-width: 1200px) {
    .data-table {
        font-size: 1em;
    }
    td:nth-child(1) {
        padding-left: 30px;
        width: 25%;
    }
    td:nth-child(2) {
        padding-left: 2px;
        width: 40%;
    }
}

@media screen and (min-width: 1200px) and (max-width: 1500px) {
    .data-table {
        font-size: 1.3em;
    }
    td:nth-child(1) {
        padding-left: 30px;
        width: 25%;
    }
    td:nth-child(2) {
        padding-left: 2px;
        width: 50%;
    }
}

@media only screen and (min-width: 1500px) {
    .data-table {
        font-size: 1.3em;
    }
    td:nth-child(1) {
        padding-left: 30px;
        width: 25%;
    }
    td:nth-child(2) {
        padding-left: 2px;
        width: 55%;
    }
}

